--- a/INSTALL.TXT
+++ b/INSTALL.TXT
@@ -9,25 +9,20 @@ The key directories and files are:
 
 File              Purpose
 ----------------------------
-LICENSE.TXT       - Product license
-build             - Build tools and scripts
-configure         - Primary build configuration script
-doc               - Documentation
-out               - Generated objects, libraries, binaries and releases
-projects          - IDE project files to build the product
-src               - Source code
+LICENSE.TXT           - Product license
+build                 - Build tools and scripts
+configure             - Primary build configuration script
+doc                   - Documentation
+out                   - Generated objects, libraries, binaries and releases
+projects              - IDE project files to build the product
+src                   - Source code
 
-out/buildConfig.h - Configure settings
-out/bin           - All created binaries. On windows, DLLs go here also.
-out/lib			  - Static and shared libraries
-out/modules       - Loadable modules and byte code modules
-out/obj           - Compiled source objects
-out/include       - Directory for generated include files
-
-See Also
---------
-
-LICENSE.TXT -- License details.
+out/inc               - Directory for generated include files
+out/inc/buildConfig.h - Configure settings
+out/bin               - All created binaries. On windows, DLLs go here also.
+out/lib	    		  - Static and shared libraries
+out/modules           - Loadable modules and byte code modules
+out/obj               - Compiled source objects
 
 --------------------------------------------------------------------------------
 Copyright (c) 2003-2011 Embedthis Software, LLC. All Rights Reserved.
