--- a/doc/api/http.dox
+++ b/doc/api/http.dox
@@ -1260,13 +1260,12 @@ PREDEFINED             = WIN=1 \
 						 LINUX=1 \
                          BIT_UNIX_LIKE=1 \
                          BIT_WIN_LIKE=1 \
-                         BIT_FEATURE_ASSERT=1 \
-                         BIT_FEATURE_FLOAT=1 \
-                         BIT_FEATURE_HTTP=1 \
-                         BIT_FEATURE_REGEXP=1 \
-                         BIT_FEATURE_SSL=1 \
-                         BIT_FEATURE_OPENSSL=1 \
-                         BIT_FEATURE_AUTH_FILE=1 \
+                         BIT_ASSERT=1 \
+                         BIT_FLOAT=1 \
+                         BIT_HTTP=1 \
+                         BIT_PACK_REGEXP=1 \
+                         BIT_PACK_SSL=1 \
+                         BIT_PACK_OPENSSL=1 \
                          DOXYGEN=1
 
 # If the MACRO_EXPANSION and EXPAND_ONLY_PREDEF tags are set to YES then 
